<resources>
    <string name="album_art">Album Art</string>
    <string name="app_name">Sea Tranquility</string>
    <string name="day_playlist">Day</string>
    <string name="night_playlist">Night</string>
    <string name="titles">Titles</string>
    <string name="artists">Artists</string>
    <string name="song">Song Title</string>
    <string name="play"> Now Playing</string>
    <string name="time">Time</string>
    <string name="tropical"> Tropical Beach</string>
    <string name="tropical_artist">Samuel Higgins</string>
    <string name="chimes">Wind Chimes</string>
    <string name="chime_artist">Bobo Nobo</string>
    <string name="forest">Pine Forest</string>
    <string name="forest_artist">Bianca Sorenson</string>
    <string name="waterfall">WaterFalls</string>
    <string name="waterfall_artist">TLC</string>
    <string name="monsoon">Monsoon</string>
    <string name="monsoon_artist">Sir Rainsalot</string>
    <string name="night_canyon">A Night in a Canyon</string>
    <string name="night_canyon_artist">Grand</string>
    <string name="wetlands">Wetlands</string>
    <string name="wetlands_artist">Carlos Swampers</string>
    <string name="store">Store</string>
    <string name="buymoresongs">Want some new meditation songs?</string>
    <string name="buy">Buy</string>
    <string name="now_playingdescription">This is a "now playing" song detail screen. It will show song details and include the media player.</string>
    <string name="store_description">This is the purchase activity or store where you can buy more meditation songs, it will use google pay and the stripe integration.</string>
    <string name="title_description">This is a playlist is based on titles. To play each song individually press the play button located to the far right of every song</string>
    <string name="now_nightdescription">This is a playlist of songs of the night genre. To play each song individually press the play button located to the far right of every song.</string>
    <string name="day_description">This is a playlist of songs of the day genre. To play each song individually press the play button located to the far right of every song.</string>
    <string name="artists_description">This is a playlist is based on Artists. To play each song individually press the play button located to the far right of every song.</string>
    <string name="back_to_main">Back to Main</string>
</resources>
