<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stripe="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tranquilitysea.StoreActivity">

    <net.steamcrafted.materialiconlib.MaterialIconView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        app:materialIcon="arrow_left"
        app:materialIconColor="@android:color/holo_blue_light"
        app:materialIconSize="35dp" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/buymoresongs"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />


    <com.stripe.android.view.CardInputWidget
        android:id="@+id/card_input_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        stripe:cardTextErrorColor="@android:color/holo_orange_dark"
        stripe:cardTint="@android:color/holo_purple" />

    <Button
        android:id="@+id/buy_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/buy"
        android:textColor="@color/background1" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:padding="12dp"
            android:text="@string/store_description" />
    </android.support.v7.widget.CardView>


</LinearLayout>
